--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -36,3 +36,11 @@
   border-radius: 5px;
   margin: 20px 0;
 }
+
+.note-blockquote {
+  background-color: rgba(100, 255, 152, 0.128); /* Adjust the background color */
+  padding: 20px;
+  border-left: 12px solid ; /* Adjust the border color */
+  border-radius: 5px;
+  margin: 20px 0;
+}
